--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@geoman-io/leaflet-geoman-free": "^2.19.0",
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.25.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.70.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.12.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
