Update .gitignore to track model.pkl
Removed model.pkl from the .gitignore file to allow tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ database.db
 # Large Models and Datasets
 New Plant Diseases Dataset(Augmented)/
 trained_plant_disease_model.keras
-# model.pkl  # keeping if not too large, but .keras is definitely too big for standard git
+# model.pkl  
 
 # User Uploads
 static/uploads/*
